-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 16, 17
-
Component/s: hotspot
-
b05
-
generic
-
generic
Some runtime/cds tests assume that the VM only outputs warnings to stderr as formatted by warning(const char* format, ...), and fail when flags are used that lead to ad hoc warning messages printed to stdout. For example:
$ make run-test TEST="test/hotspot/jtreg/runtime/cds/ServiceLoaderTest.java" CONF=linux-x86_64-server-fastdebug TEST_VM_OPTS="-XX:+LogCompilation"
(...)
TEST RESULT: Failed. Execution failed: `main' threw exception: java.lang.RuntimeException: Mismatched line 0: "============================================================" vs "Warning: TraceDependencies results may be inflated by VerifyDependencies"
$ make run-test TEST="test/hotspot/jtreg/runtime/cds/appcds/dynamicArchive/DynamicArchiveRelocationTest.java" CONF=linux-x86_64-server-fastdebug TEST_VM_OPTS="-XX:+StressIGVN -XX:+UseParallelGC"
(...)
TEST RESULT: Failed. Execution failed: `main' threw exception: java.lang.RuntimeException: The line 'Warning: set +LogCompilation to log the seed.' does not match pattern '.*Unmapping region #3 at base 0x.*(Bitmap)'
Assigned to the "compiler" subcomponent, as the offending warnings are related to the +LogCompilation and +StressX compiler flags.
$ make run-test TEST="test/hotspot/jtreg/runtime/cds/ServiceLoaderTest.java" CONF=linux-x86_64-server-fastdebug TEST_VM_OPTS="-XX:+LogCompilation"
(...)
TEST RESULT: Failed. Execution failed: `main' threw exception: java.lang.RuntimeException: Mismatched line 0: "============================================================" vs "Warning: TraceDependencies results may be inflated by VerifyDependencies"
$ make run-test TEST="test/hotspot/jtreg/runtime/cds/appcds/dynamicArchive/DynamicArchiveRelocationTest.java" CONF=linux-x86_64-server-fastdebug TEST_VM_OPTS="-XX:+StressIGVN -XX:+UseParallelGC"
(...)
TEST RESULT: Failed. Execution failed: `main' threw exception: java.lang.RuntimeException: The line 'Warning: set +LogCompilation to log the seed.' does not match pattern '.*Unmapping region #3 at base 0x.*(Bitmap)'
Assigned to the "compiler" subcomponent, as the offending warnings are related to the +LogCompilation and +StressX compiler flags.
- relates to
-
JDK-8258057 serviceability/attach/RemovingUnixDomainSocketTest.java doesn't ignore VM warnings
-
- Resolved
-